// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`User > should correspond default layout 1`] = `
<div>
  <button
    class="_iconButton_d28ccf"
  >
    <div
      class="_customIcon_a7f5a2 _customIcon_a7f5a2--account"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
        />
        <path
          d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
        />
      </svg>
    </div>
     
    User 1
  </button>
</div>
`;

exports[`User > should correspond default layout 2`] = `
<div>
  <button
    class="_iconButton_d28ccf"
  >
    <div
      class="_customIcon_a7f5a2 _customIcon_a7f5a2--account"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
        />
        <path
          d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
        />
      </svg>
    </div>
     
    User 2
  </button>
</div>
`;

exports[`User > should support the "className" prop 1`] = `
<div>
  <button
    class="_iconButton_d28ccf custom-class"
  >
    <div
      class="_customIcon_a7f5a2 _customIcon_a7f5a2--account"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
        />
        <path
          d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
        />
      </svg>
    </div>
     
    User 1
  </button>
</div>
`;

exports[`User > should support the "className" prop 2`] = `
<div>
  <button
    class="_iconButton_d28ccf custom-class-v2"
  >
    <div
      class="_customIcon_a7f5a2 _customIcon_a7f5a2--account"
    >
      <svg
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.727 8.184a2.727 2.727 0 1 1-5.454 0 2.727 2.727 0 1 1 5.454 0zM10 9.09a.908.908 0 1 0 0-1.817.909.909 0 1 0 0 1.817zm0 0"
        />
        <path
          d="M20 10c0 5.523-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0s10 4.477 10 10zm-4.137 5.707a8.184 8.184 0 1 0-11.727 0 6.365 6.365 0 0 1 11.727 0zm-1.496 1.211a4.545 4.545 0 0 0-8.734.004A8.17 8.17 0 0 0 10 18.184a8.128 8.128 0 0 0 4.367-1.266zm0 0"
        />
      </svg>
    </div>
     
    User 2
  </button>
</div>
`;
